# cgu-nfe

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
cgu_nfe/: scrapy.cfg
cgu_nfe/cgu_nfe/: config.py  errors.py  items.py  metadata.py  middlewares.py  pipelines.py  proxy.py  server_status.py  settings.py
cgu_nfe/cgu_nfe/spiders/: input.py  parser.py  spider.py  static.py
cgu_nfe/cgu_nfe/spiders/tests/bot/: test_parser.py
cgu_nfe/cgu_nfe/spiders/tests/debug/: log.txt
cgu_nfe/cgu_nfe/spiders/tests/reference_files/: _on_processing_nfe_request.html
cgu_nfe/cgu_nfe/spiders/tests/response_files/: _on_processing_first_request.json  _on_processing_nfe_request.html  parse.json
cgu_nfe/schemas/: output-schema.yaml
cgu_nfe/tests/bot/: test_parser.py
cgu_nfe/tests/debug/: log.txt
cgu_nfe/tests/reports/unittest/: junit.xml
cgu_nfe/tests/reports/unittest/html/: index.html
cgu_nfe/tests/response_files/: _on_processing_nfe_request.html  parse.json
docker/proxy/: Dockerfile  pyproject.toml
docker/proxy/proxy/: proxy.py
modules/cli/: cli.py
modules/cli/jira/: issue.py  static.py
proxy/: pyproject.toml
proxy/proxy/: proxy.py
