[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["FabioCaffarello <fabio.caffarello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
redis = "^4.3.4"

[tool.poetry.scripts]
teste = "proxy.proxy:test_run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
